<resources>

    <string name="app_name">Taxi Hailing</string>
    <string name="title_login">Login</string>
    <string name="login">Login</string>


    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>

    <string name="hint_name">Name</string>
    <string name="hint_email_address">Email</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_password">Password</string>

    <string name="internet_not_available">Please check your network connection.</string>

    <string name="empty_name_validation">Please enter name</string>
    <string name="empty_email_validation">Please enter email address</string>
    <string name="empty_phone_number_validation">Please enter phone number</string>
    <string name="empty_gender_validation">Please select gender</string>
    <string name="empty_password_validation">Please enter password</string>
    <string name="valid_email_message">Please enter valid email address</string>

    <string name="user_name">Name : %1$s</string>
    <string name="user_email">Email : %1$s</string>
    <string name="user_phone_number">Phone Number : %1$s</string>
    <string name="user_gender">Gender : %1$s</string>
    <string name="user_latitude">Latitude : %1$s</string>
    <string name="user_longitude">Longitude : %1$s</string>
    <string name="menu_logout">Logout</string>

</resources>